trying to get docker compose to work

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,14 @@
 {
   "dependencies": {
-    "@grpc/grpc-js": "^1.9.0",
-    "@grpc/proto-loader": "^0.7.10",
-    "@nestjs/class-validator": "^0.13.4",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/typeorm": "^10.0.0"
+    "@nestjs/typeorm": "^10.0.0",
+    "@nestjs/mapped-types": "*",
+    "@grpc/grpc-js": "^1.9.0",
+    "@grpc/proto-loader": "^0.7.10",
+    "class-validator": "^0.14.0"
   },
   "name": "gol",
   "version": "1.0.0",
@@ -35,8 +35,5 @@
     "migration:generate": "npm run typeorm -- migration:generate -n",
     "migration:run": "npm run typeorm -- migration:run",
     "migration:revert": "npm run typeorm -- migration:revert"
-  },
-  "devDependencies": {
-    "ts-proto": "^2.11.2"
   }
 }
