--- a/.env
+++ b/.env
@@ -1,15 +1,12 @@
 #env.prod
 NODE_ENV=production
-API_URL="/api"
-FRONTEND_URL="http://localhost:8080"
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/blog?schema=public"
-POSTGRES_USER=johndoe
-POSTGRES_PASSWORD=randompassword
-POSTGRES_DB=blog
-JWT_SECRET="RandomSecret123@"
-JWT_REFRESH_SECRET="RandomRefresh383912!"
-AWS_REGION="your-region"
-AWS_ACCESS_KEY_ID="your-access-key"
-AWS_SECRET_ACCESS_KEY="your-secret-access-key"
-AWS_BUCKET_NAME="your-bucket-name"
-GOOGLE_CLIENT_ID="your-google-client-id"
+API_URL=http://localhost:3001
+FRONTEND_URL=http://localhost:3000
+DATABASE_URL=postgresql://meowzer:pollerbear@db:5432/gameoflife?schema=public
+POSTGRES_USER=meowzer
+POSTGRES_PASSWORD=pollerbear
+POSTGRES_DB=gameoflife
+JWT_SECRET=RandomSecret123@
+JWT_REFRESH_SECRET=RandomRefresh383912!
+FRONTEND_PORT=3000
+BACKEND_PORT=3001
